Fix label contrast color

--- a/css/styles.css
+++ b/css/styles.css
@@ -460,7 +460,7 @@ i:hover {
 }
 
 .crazylabel {
-  color: #7d7c84;
+  color: #4a4a4a;
   position: absolute;
   top: 2px;
   left: 4px;
